# cognitoctl

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-main.yml  deploy-test.yml
src/cognitoclt/: __main__.py
src/cognitoclt/commands/: config.py
src/cognitoclt/config/: config.py
src/cognitoctl/: main.py
src/cognitoctl/commands/: __init__.py  config.py  group.py  password.py  session.py  user.py  user_maintenance.py
src/cognitoctl/config/: config.py
src/cognitoctl/exceptions/: __init__.py
tests/cognitoclt_tests/config/: test_config.py
